force-app/main/default/objects/Services_SOW__c/fields/Account_Geography__c.field-meta.xml
<CustomField>
    <fullName>Account_Geography__c</fullName>
    <formula>Account__r.Geography__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Geography</label>
    <type>Text</type>
</CustomField>