force-app/main/default/objects/Services_SOW__c/fields/Can_Deploy_Normal_Hours__c.field-meta.xml
<CustomField>
    <fullName>Can_Deploy_Normal_Hours__c</fullName>
    <label>Can Deploy Normal Hours</label>
    <type>TextArea</type>
</CustomField>