force-app/main/default/objects/Services_SOW__c/fields/Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_Active__c</fullName>
    <formula>IF(
  ISBLANK(Completion_Date__c),
  TODAY()-Start_Date__c,
  Completion_Date__c-Start_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>