force-app/main/default/objects/Services_SOW__c/fields/Delegated_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ticket #22373</description>
    <label>Delegated Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services_SOW</relationshipName>
    <type>Lookup</type>
</CustomField>