force-app/main/default/objects/Services_SOW__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Solution Story</fullName>
            </value>
            <value>
                <fullName>Standard Demo</fullName>
            </value>
            <value>
                <fullName>Tailored Demo</fullName>
            </value>
            <value>
                <fullName>Hands-on Workshop</fullName>
            </value>
            <value>
                <fullName>PoC / Pilot</fullName>
            </value>
            <value>
                <fullName>Other (description below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>