force-app/main/default/objects/Services_SOW__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Ticket # 22373</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>