force-app/main/default/objects/Services_SOW__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <formula>TEXT( Opportunity__r.Forecast_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>