force-app/main/default/objects/Services_SOW__c/fields/Mission_Critical_Solution__c.field-meta.xml
<CustomField>
    <fullName>Mission_Critical_Solution__c</fullName>
    <label>Mission Critical Solution</label>
    <type>TextArea</type>
</CustomField>