force-app/main/default/objects/Services_SOW__c/fields/Opportunity_Probability_at_Request__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probability_at_Request__c</fullName>
    <description>The probability of the opportunity is copied over to the record whenever a new request is created.</description>
    <label>Opportunity Probability at Request</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>