force-app/main/default/objects/Services_SOW__c/fields/Opportunity_Product_Lines_Text__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Lines_Text__c</fullName>
    <formula>Opportunity__r.Opp_Product_Lines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product Lines (Text)</label>
    <type>Text</type>
</CustomField>