force-app/main/default/objects/Services_SOW__c/fields/Primary_Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Problem__c</fullName>
    <label>Primary Business Problem</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>