force-app/main/default/objects/Services_SOW__c/fields/SE_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>SE_Manager_Email__c</fullName>
    <label>SME 1 Email</label>
    <type>Email</type>
</CustomField>