force-app/main/default/objects/Services_SOW__c/fields/Services_Amount_T_M__c.field-meta.xml
<CustomField>
    <fullName>Services_Amount_T_M__c</fullName>
    <label>Services Amount - T&amp;M</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>