force-app/main/default/objects/Services_SOW__c/fields/Services_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Services_Project_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Services_Project_Type__c)</formula>
    <label>Services Project Type</label>
    <type>Text</type>
</CustomField>