force-app/main/default/objects/Services_SOW__c/fields/Services_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Services_Request_Status__c</fullName>
    <description>SC-000057</description>
    <label>Services Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Returned for Edits</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>