force-app/main/default/objects/Services_SOW__c/fields/Simple_Product__c.field-meta.xml
<CustomField>
    <fullName>Simple_Product__c</fullName>
    <formula>IF(
  CONTAINS(TEXT(Product__c),&quot;Intapp Time&quot;),
  &quot;Intapp Time&quot;,
  CASE(Product__c,
    &quot;Intapp Flow&quot;,&quot;Intapp Flow&quot;,
    &quot;Intapp Integrate&quot;,&quot;Intapp Integrate&quot;,
    &quot;Intapp Open: Conflicts&quot;,&quot;Intapp Open: Conflicts&quot;,
    &quot;Intapp Open: Intake&quot;,&quot;Intapp Open: Intake&quot;,
    &quot;Intapp Open: Intake (Engagement Letters)&quot;,&quot;Intapp Open: Intake (Engagement Letters)&quot;,
    &quot;Intapp Open: Terms of Business&quot;,&quot;Intapp Open: Terms of Business&quot;,
    &quot;Intapp Walls&quot;,&quot;Intapp Walls&quot;,
    &quot;CG Analyze&quot;,&quot;TFG&quot;,
    &quot;CG Flow&quot;,&quot;TFG&quot;,
    &quot;CG Protect&quot;,&quot;TFG&quot;,
    &quot;LegalKEY&quot;,&quot;TFG&quot;,
    &quot;RollCall&quot;,&quot;RollCall&quot;,
    &quot;Error - please contact Business Operations&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Simple Product</label>
    <type>Text</type>
</CustomField>