force-app/main/default/objects/Services_SOW__c/fields/SOW_Link__c.field-meta.xml
<CustomField>
    <fullName>SOW_Link__c</fullName>
    <description>Gainsight was not displaying certain fields in reports as hyperlinks to the related record, so this field was created so they would have a clickable field in a report leading to the record</description>
    <formula>HYPERLINK(&quot;https://intapp.my.salesforce.com/&quot;+Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Link</label>
    <type>Text</type>
</CustomField>