force-app/main/default/objects/Services_SOW__c/fields/SOW_Name__c.field-meta.xml
<CustomField>
    <fullName>SOW_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Name Account Name (First 2 words), Product Name, Description</description>
    <inlineHelpText>Name Account Name (First 2 words), Product Name, Description</inlineHelpText>
    <label>Services Request Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>