force-app/main/default/objects/Services_SOW__c/fields/Specific_Modules__c.field-meta.xml
<CustomField>
    <fullName>Specific_Modules__c</fullName>
    <label>Specific Modules</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>