force-app/main/default/objects/Services_SOW__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Requested date</label>
    <type>Date</type>
</CustomField>