force-app/main/default/objects/Services_SOW__c/fields/Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Text__c</fullName>
    <label>Status (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>