force-app/main/default/objects/Services_SOW__c/fields/update_contract_with_SOW_link__c.field-meta.xml
<CustomField>
    <fullName>update_contract_with_SOW_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master SOW</label>
    <type>Checkbox</type>
</CustomField>