force-app/main/default/objects/Services_SOW__c/recordTypes/Early_Resource_Tracking.recordType-meta.xml
<RecordType>
    <fullName>Early_Resource_Tracking</fullName>
    <active>true</active>
    <description>Used for sellers to request PS resources when needed to close an opportunity.</description>
    <label>Early Resource Tracking</label>
</RecordType>