force-app/main/default/objects/Services_SOW__c/recordTypes/RFP_Request.recordType-meta.xml
<RecordType>
    <fullName>RFP_Request</fullName>
    <active>true</active>
    <description>Use this to submit RFPs</description>
    <label>RFP Request</label>
</RecordType>