force-app/main/default/objects/Services_SOW__c/recordTypes/SOW.recordType-meta.xml
<RecordType>
    <fullName>SOW</fullName>
    <active>true</active>
    <description>Use this type to request an SOW.</description>
    <label>SOW</label>
</RecordType>