force-app/main/default/objects/Services_SOW__c/validationRules/Cannot_change_Services_Request_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Services_Request_Status</fullName>
    <active>true</active>
    <description>No user allowed to update Services Request Status field except Jesse Meredith, Petra Haltmayer, Kevin Ehrie</description>
    <errorConditionFormula>AND(
  RecordTypeId = &apos;01250000000caCy&apos;, /*RFP Request*/
  $User.Id &lt;&gt; &apos;00550000005hzhl&apos;, /*Kevin Ehrie*/
  $User.Id &lt;&gt; &apos;00550000005XsLJ&apos;, /*Petra Haltmayer */
  $User.Id &lt;&gt; &apos;005500000016XB9&apos;, /*Jesse Meredith*/
  OR(
    ISCHANGED(Services_Request_Status__c),
    AND(
      ISNEW(),
      NOT(ISPICKVAL(Services_Request_Status__c, &quot;Submitted&quot;))
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Services_Request_Status__c</errorDisplayField>
    <errorMessage>The Services Request Status field is not editable. Please contact Professional Services Sales if you believe this value should be updated.</errorMessage>
</ValidationRule>