force-app/main/default/objects/Services_SOW__c/validationRules/Check_if_deliverable_is_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_if_deliverable_is_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT(Deliverable__c)), ISPICKVAL(Type_of_Support_Required__c,&apos;Sales Engineer&apos;),
 $Profile.Id &lt;&gt;&apos;00e30000000bvR3&apos;
)</errorConditionFormula>
    <errorDisplayField>Deliverable__c</errorDisplayField>
    <errorMessage>Fill out deliverable field</errorMessage>
</ValidationRule>