force-app/main/default/objects/Services_SOW__c/validationRules/Lock_SOW.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_SOW</fullName>
    <active>false</active>
    <description>An SOW cannot be edited once submitted or in process.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  NOT($Profile.Id = &apos;00e30000000bvR3&apos;),
  NOT($User.Id = &apos;00550000005XsLJ&apos;),
  NOT($User.Id = &apos;00550000005hzhl&apos;),
  RecordTypeId=&apos;012500000006rcw&apos;,
  OR(
    ISPICKVAL(Status__c,&quot;Submitted&quot;),
    ISPICKVAL(Status__c,&quot;In Process&quot;)
  ),
  NOT(ISCHANGED(Technical_Scoping_Assigned_To__c)),
  NOT(ISCHANGED(Status__c)),
  NOT(ISCHANGED(Opportunity__c))
)</errorConditionFormula>
    <errorMessage>Please do not edit the SOW once it&apos;s submitted or in process.</errorMessage>
</ValidationRule>