force-app/main/default/objects/Services_SOW__c/validationRules/Notes_Required_before_sending_to_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Required_before_sending_to_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c,&quot;Returned to Requester for Edits&quot;),
  ISBLANK(Notes_to_Requester__c),
  RecordType.Id = &quot;012500000006rcw&quot;
)</errorConditionFormula>
    <errorDisplayField>Notes_to_Requester__c</errorDisplayField>
    <errorMessage>Please provide notes to the requester when sending it back for edits.</errorMessage>
</ValidationRule>