force-app/main/default/objects/Services_SOW__c/validationRules/SOW_Completed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>SOW_Completed_Status</fullName>
    <active>true</active>
    <description>SC-000009
Only users with the role &quot;Director - Professional Services&quot; can change the SOW Status to &quot;SOW Completed&quot;</description>
    <errorConditionFormula>AND(
  $User.Id!=&quot;00550000001QCqH&quot;, /*Jason Wood*/
  $User.Id!=&quot;0055000000760CW&quot;, /*Ashish Sharma*/
  $User.Id!=&quot;005500000074rL8&quot;, /*Heather Curry*/
  $User.Id!=&quot;0052J000008gkfV&quot;, /*Sarah Bakeer*/
  $User.Id!=&quot;0052J000008V2aD&quot;, /*Daniel Giampietro*/
  $User.Id!=&quot;0052J000008HkZN&quot;, /*Rachel Wigen-Toccalino*/
  $Profile.Id!=&quot;00e30000000bvR3&quot;, /*System Admin*/
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &quot;SOW Completed&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select &quot;Ready for Review&quot; to have this SOW reviewed and approved for completion.</errorMessage>
</ValidationRule>