force-app/main/default/objects/Services_SOW__c/listViews/All_Returned_for_Edits.listView-meta.xml
<ListView>
    <fullName>All_Returned_for_Edits</fullName>
    <columns>NAME</columns>
    <columns>Geography__c</columns>
    <columns>Status__c</columns>
    <columns>Notes_to_Requester__c</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Description__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Deadline__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Returned to Requesting Employee for Edits</value>
    </filters>
    <label>All Returned for Edits</label>
    <language>en_US</language>
</ListView>