force-app/main/default/objects/Services_SOW__c/listViews/Time_Completed.listView-meta.xml
<ListView>
    <fullName>Time_Completed</fullName>
    <columns>Start_Date__c</columns>
    <columns>NAME</columns>
    <columns>Services_Hours_T_M__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Description__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Submit_directly_for_Approval__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>,Submitted,In Process,On Hold</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Intapp Time: Cloud</value>
    </filters>
    <label>Time Cloud Completed</label>
    <language>en_US</language>
</ListView>