force-app/main/default/objects/Services_SOW__c/listViews/Time_High_Priority.listView-meta.xml
<ListView>
    <fullName>Time_High_Priority</fullName>
    <columns>NAME</columns>
    <columns>SOW_Name__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Reason_for_High_Urgency__c</columns>
    <columns>Deadline__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Urgency_Level__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>Time - High Priority</label>
    <sharedTo>
        <group>Professional_Services</group>
    </sharedTo>
</ListView>