force-app/main/default/objects/Services_SOW__c/listViews/Time_InProcess.listView-meta.xml
<ListView>
    <fullName>Time_InProcess</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Requesting_Employee__c</columns>
    <columns>Description__c</columns>
    <columns>Client_Contact__c</columns>
    <columns>Submit_directly_for_Approval__c</columns>
    <columns>Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>Technical_Scoping_Assigned_To__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,In Process</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Time,DTE,Roll</value>
    </filters>
    <label>Time In Process</label>
</ListView>